# nzila-automation

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .linkcheckignore  .markdownlint.json  .npmrc  .vale.ini  CHANGELOG.md  CODEOWNERS  Dockerfile  README.md  SECURITY.md  catalog-info.yaml  contract-test-output.txt  docker-compose.automation.yml  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tenant-files-ci.txt  tenant-files.txt  tmp-api-errors-structured.txt  tmp-api-errors.txt  tmp-tsc-check.txt  tmp-tsc-current.txt  tmp-tsc-errors.txt  tmp-tsc-full.txt  turbo.json  vitest.config.ts
tech-repo-scaffold/django-backbone/: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
tech-repo-scaffold/django-backbone/apps/ai_core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
tech-repo-scaffold/django-backbone/apps/analytics/: admin.py  models.py  serializers.py  urls.py  views.py
tech-repo-scaffold/django-backbone/apps/auth_core/: admin.py  apps.py  authentication.py  middleware.py  models.py  serializers.py  urls.py  views.py
tech-repo-scaffold/django-backbone/apps/billing/: admin.py  models.py  serializers.py  urls.py  views.py
tech-repo-scaffold/django-backbone/apps/compliance/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
tech-repo-scaffold/django-backbone/apps/content/: urls.py  (+4 more)
tech-repo-scaffold/django-backbone/config/: asgi.py  urls.py  wsgi.py
tech-repo-scaffold/django-backbone/requirements/: base.txt  development.txt  production.txt  test.txt
(+4845 files in other folders)
